# Chopsticks

./: .gitignore  BreadthFirstFuncs.py  PreOrderFuncs.py  README.md  calc_game_states.py  chopstics_tree.txt  chopstics_tree_depth=10.txt  demo_dsplot.py  demo_graph.py  demo_networkx.py  demo_print_tree.py  demo_render_tree.py  demo_tree.py  game_states.py  program.py  pyproject.toml  tree_depth=15.txt
MyLibrary/: BreadthFirst.py  PreOrder.py
playground/: simulate.py
src/chopsticks/: bfs_tools.py  dfs_tools.py  engine.py
