[project]
name = "chopsticks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anytree>=2.13.0",
    "dsplot>=0.9.0",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
